# Hotspot-Aggregator

./: README.md  models.py  routes.py
backend/: pyproject.toml  run.bat
backend/app/: crud.py  db.py  main.py  models.py  schemas.py  settings.py
backend/app/routers/: hotspots.py
backend/app/routes/: news.py  user.py
backend/app/tasks/: celery_app.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: Auth.jsx  Login.jsx  Register.jsx
frontend/src/contexts/: AuthContext.jsx
spider/: weibo_spider.py  zhihu_spider.py
templates/: index.html  login.html
